# python-poetry-flask-api

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  setup_codequality.sh  setup_folders.sh
docs/: Local_Dev_Guide.md  Production_Guide.md  Project_Structure.md
src/: config.py
src/python_poetry_flask_package_1/: __init__.py
src/python_poetry_flask_package_1/api/compare/: __init__.py
src/python_poetry_flask_package_1/api/summarize/: __init__.py
src/python_poetry_flask_package_1/main/: __init__.py
