[tool.poetry]
name = "gigyeah-ai-engine"
version = "0.1.0"
description = "The AI Engine powering Gigyeah"
authors = ["Sagar <sagarmoy.goww@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
black = {version = "^21.5b0", allow-prereleases = true}
isort = "^5.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | env
  | venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
